add data import

--- a/package.json
+++ b/package.json
@@ -42,6 +42,22 @@
                 "file": "breakscreen.html",
                 "workspace": "low ink stream",
                 "headerColor": "#262F40"
+            },
+            {
+                "name": "battlefyimport",
+                "title": "Import tournament data",
+                "width": 2,
+                "file": "battlefyImport.html",
+                "workspace": "low ink setup",
+                "headerColor": "#262F40"
+            },
+            {
+                "name": "maplist",
+                "title": "Map List",
+                "width": 2,
+                "file": "maplists.html",
+                "workspace": "low ink setup",
+                "headerColor": "#262F40"
             }
         ],
         "graphics": [{
