--- a/bower.json
+++ b/bower.json
@@ -1,22 +1,22 @@
 {
-  "name": "inkstronomy-overlays",
-  "description": "",
-  "main": "index.js",
-  "authors": [
-    "inkfarer <inkfarer@gmail.com>"
-  ],
-  "license": "MIT",
-  "homepage": "",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "bower_components"
-  ],
-  "dependencies": {
-    "iron-flex-layout": "^2.0.3",
-    "paper-button": "^2.1.0",
-    "paper-input": "^2.2.2",
-    "sc-fitted-text": "SupportClass/sc-fitted-text#^1.1.3",
-    "nodecg-toggle": "NodeCGElements/nodecg-toggle#^1.0.0"
-  }
+    "name": "low-ink-overlays",
+    "description": "",
+    "main": "index.js",
+    "authors": [
+        "inkfarer <inkfarer@gmail.com>"
+    ],
+    "license": "MIT",
+    "homepage": "",
+    "private": true,
+    "ignore": [
+        "**/.*",
+        "bower_components"
+    ],
+    "dependencies": {
+        "iron-flex-layout": "^2.0.3",
+        "paper-button": "^2.1.0",
+        "paper-input": "^2.2.2",
+        "sc-fitted-text": "SupportClass/sc-fitted-text#^1.1.3",
+        "nodecg-toggle": "NodeCGElements/nodecg-toggle#^1.0.0"
+    }
 }
