--- a/package.json
+++ b/package.json
@@ -21,51 +21,11 @@
         "compatibleRange": "^1.1.1",
         "dashboardPanels": [
             {
-                "name": "scoring",
-                "title": "Scoring",
+                "name": "li-dash",
+                "title": "Low Ink options",
                 "width": 2,
-                "file": "scoring.html",
-                "workspace": "low ink stream",
-                "headerColor": "#262F40"
-            },
-            {
-                "name": "music",
-                "title": "Music",
-                "width": 3,
-                "file": "music.html",
-                "workspace": "low ink stream",
-                "headerColor": "#262F40"
-            },
-            {
-                "name": "breakscreen",
-                "title": "Break Screen",
-                "width": 4,
-                "file": "breakScreen.html",
-                "workspace": "low ink stream",
-                "headerColor": "#262F40"
-            },
-            {
-                "name": "winners",
-                "title": "Map Winners",
-                "width": 4,
-                "file": "mapWinners.html",
-                "workspace": "low ink stream",
-                "headerColor": "#262F40"
-            },
-            {
-                "name": "battlefyimport",
-                "title": "Import tournament data",
-                "width": 2,
-                "file": "tourneyImport.html",
-                "workspace": "low ink setup",
-                "headerColor": "#262F40"
-            },
-            {
-                "name": "maplist",
-                "title": "Map Lists",
-                "width": 6,
-                "file": "mapLists.html",
-                "workspace": "low ink setup",
+                "file": "liDash.html",
+                "workspace": "ipl",
                 "headerColor": "#262F40"
             }
         ],
