--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dependencies": {
         "fitted-text": "^1.0.1",
         "gsap": "3.6.1",
+        "lodash": "^4.17.21",
         "luxon": "^1.26.0"
     },
     "devDependencies": {
