--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
         ]
     },
     "dependencies": {
-        "fitted-text": "^1.0.1",
         "gsap": "3.6.1",
         "lodash": "^4.17.21",
-        "luxon": "^1.26.0"
+        "luxon": "^1.26.0",
+		"fitted-text": "^1.0.0"
     },
     "devDependencies": {
         "ts-nodecg": "^0.3.1"
