--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "low-ink-overlays",
     "version": "0.0.0",
     "compatibleDashboardVersion": "^4.0.0",
+    "compatibleGameVersions": ["SPLATOON_2", "SPLATOON_3"],
     "description": "",
     "homepage": "https://github.com/inkfarer/low-ink-overlays",
     "author": {
