--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
         ]
     },
     "dependencies": {
-        "@tourneyview/renderer": "file:../../../tourneyview/tourneyview-renderer-0.7.0.tgz",
+        "@tourneyview/renderer": "0.8.0-alpha.0",
         "d3": "^7.9.0",
         "fitted-text": "^1.0.0",
         "gsap": "3.6.1",
